# investec-mcp

./: .env.example  README.md  pyproject.toml
example/: .env.example  README.md  openai_agent.py  pyproject.toml
